Talks of milestone conference

--- a/cv.html
+++ b/cv.html
@@ -114,7 +114,7 @@
   My ORCiD number is <a href="https://orcid.org/0000-0002-2904-1215" style="color:#A6CE39;font-variant:normal;font-style:normal;font-size: 1em;"><i class="ai ai-orcid"></i> 0000-0002-2904-1215</a>.
 </p>
 <hr>
-   <div id="Positions">
+   <div id="positions">
    <!-- Positions
    ================================================== -->
 
@@ -123,19 +123,19 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
         <div class="property">Mentors:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
         <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
-        <div class="property">Institution:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a></div>
         <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
         <div class="property">Duration:</div><div class="value">October 2020 - September 2022</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Postdoctoral Researcher at <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Postdoctoral Researcher at <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
         <div class="property">Mentors:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
         <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
-        <div class="property">Institution:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a></div>
         <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
         <div class="property">Duration:</div><div class="value">February 2020 - September 2020</div>
       </div>
@@ -491,7 +491,12 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#milestoneseinstein2020">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Beyond Gaussians in the probabilistic analysis of condition numbers in algebraic geometry</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Computing the homology of semialgebraic sets in weak single exponential time</div>
          </div>
 
@@ -1057,7 +1062,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
            <div class="property">Objective:</div><div class="value">Discussion for future projects</div>
            <div class="property">Institution:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
            <div class="property">Location:</div><div class="value">Paris, France</div>
-           <div class="property">Date:</div><div class="value">19th to the 25th of December of 2020</div>
+           <div class="property">Date:</div><div class="value">19th to the 25th of January of 2020</div>
          </div>
 
          <br><div class="cv">
@@ -1155,10 +1160,25 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="jovenesrsme2020"></span>
+<!-- 2020
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="milestoneseinstein2020"></span>
 <br><div class="cv">
 <div class="year">
   <h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/milestone.php">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Matías Bender and Peter B&uuml;rgisser</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
+  <div class="property">Location:</div><div class="value">Berlin, Germany</div>
+  <div class="property">Date:</div><div class="value">27th to 28th of February of 2020</div>
+</div>
+
+<span id="jovenesrsme2020"></span>
+<br><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="https://jovenesrsme2020.com/">V Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
 <div class="year"></div><div class="title">
