--- a/cv_es.html
+++ b/cv_es.html
@@ -116,7 +116,7 @@
   Mi número de ORCiD es <a href="https://orcid.org/0000-0002-2904-1215" style="color:#A6CE39;font-variant:normal;font-style:normal;font-size: 1em;"><i class="ai ai-orcid"></i> 0000-0002-2904-1215</a>.
 </p>
 <hr>
-   <div id="Positions">
+   <div id="positions">
    <!-- Positions
    ================================================== -->
 
@@ -125,19 +125,19 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Becario Postdoctoral de la FSMP</a> en <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Becario Postdoctoral de la FSMP</a> en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
         <div class="property">Mentores:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
         <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
-        <div class="property">Institución:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a></div>
         <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
         <div class="property">Duración:</div><div class="value">octubre 2020 - septiembre 2022</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Investigador postodoctoral en <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Investigador postodoctoral en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
         <div class="property">Mentores:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
         <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
-        <div class="property">Institución:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a></div>
         <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
         <div class="property">Duración:</div><div class="value">febrero 2020 - septiembre 2020</div>
       </div>
@@ -474,7 +474,12 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#milestoneseinstein2020">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Beyond Gaussians in the probabilistic analysis of condition numbers in algebraic geometry</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Computing the homology of semialgebraic sets in weak single exponential time</div>
          </div>
 
@@ -860,7 +865,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year">
       <h4>2011-14</h4>
       </div><div class="title">
-      <h4>&emsp;Revista \(\pi kasle\) Aldizkaria<span style="float:right;"><a href="pikasle_en.html">Información detallada, contenido y números de la revista</a></span></h4></div>
+      <h4>&emsp;Revista \(\pi kasle\) Aldizkaria<span style="float:right;"><a href="pikasle_es.html">Información detallada, contenido y números de la revista</a></span></h4></div>
         <div class="property">ISSN:</div><div class="value">2174-9027 (edición digital) y 2255-5714 (edición impresa)</div>
         <div class="property">Fundadores:</div><div class="value"><a href="https://math.mit.edu/directory/profile.php?pid=1715">Ricardo Grande</a> y Josu&eacute; Tonelli-Cueto</div>
         <div class="property">Papel:</div><div class="value">Miembro del comité editorial</div>
@@ -1053,7 +1058,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
            <div class="property">Objetivo:</div><div class="value">Discusión de futuros projectos</div>
            <div class="property">Institución:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
            <div class="property">Lugar:</div><div class="value">París, Francia</div>
-           <div class="property">Fecha:</div><div class="value">del 19 al 25 de diciembre del 2020</div>
+           <div class="property">Fecha:</div><div class="value">del 19 al 25 de enero del 2020</div>
          </div>
 
          <br><div class="cv">
@@ -1150,10 +1155,27 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<!-- 2020
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="milestoneseinstein2020"></span>
+<br><div class="cv">
+<div class="year">
+  <h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/milestone.php">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Conferencia de Hitos del Semestre Temático Einstein en Geometría Algebraica)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Matías Bender and Peter B&uuml;rgisser</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
+  <div class="property">Lugar:</div><div class="value">Berlin, Alemania</div>
+  <div class="property">Fecha:</div><div class="value">del 27 al 28 de febrero del 2020</div>
+</div>
+
 <span id="jovenesrsme2020"></span>
 <br><div class="cv">
 <div class="year">
-<h4>2020</h4>
+
 </div><div class="title">
 <h4>&emsp;<a href="https://jovenesrsme2020.com/">V Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
   <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
@@ -1172,7 +1194,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 </div><div class="title">
 <h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/conference.php">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
 <div class="year"></div><div class="title">
-<h4>&ensp;&emsp;<em>(Conferencia de Apertura del Semestre Temático Einstein en geometría Algebraica)</em></h4></div>
+<h4>&ensp;&emsp;<em>(Conferencia de Apertura del Semestre Temático Einstein en Geometría Algebraica)</em></h4></div>
   <div class="property">Organizador:</div><div class="value">Mario Kummer, Angela Ortega, Andrea Petracci y Karin Schaller</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.fu-berlin.de/">Freie Universit&auml;t Berlin</a></div>
   <div class="property">Lugar:</div><div class="value">Berlín, Alemania</div>
