--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -162,10 +162,13 @@
       author  = {Tonelli-Cueto, Josu\'{e}},
       title   = {{Condition and Homology in Semialgebraic Geometry}},
       school  = {Technische Universit\"at Berlin},
+      type    = {Doctoral Thesis},
       month   = dec,
       year    = 2019,
       address = {DepositOnce Repository},
-      note    = {http://dx.doi.org/10.14279/depositonce-9453},
+      url     = {http://dx.doi.org/10.14279/depositonce-9453},
+      doi     = {10.14279/depositonce-9453},
+      note    = {\href{http://dx.doi.org/10.14279/depositonce-9453}{http://dx.doi.org/10.14279/depositonce-9453}},
     }</pre>
   <p style="overflow-wrap: break-word;">For citations in texts not compiled with TeX, LaTeX or other variants, it is important to add the <a href="https://www.doi.org/">Digital Object Identifier (DOI)</a> to the citation. The latter can be indicated either with &ldquo;DOI 10.14279/depositonce-9453&rdquo; or with the link &ldquo;http://dx.doi.org/10.14279/depositonce-9453&rdquo;.</p>
   <hr>
