--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -166,10 +166,13 @@
       author  = {Tonelli-Cueto, Josu\'{e}},
       title   = {{Condition and Homology in Semialgebraic Geometry}},
       school  = {Technische Universit\"at Berlin},
+      type    = {Doctoral Thesis},
       month   = dec,
       year    = 2019,
       address = {DepositOnce Repository},
-      note    = {http://dx.doi.org/10.14279/depositonce-9453},
+      url     = {http://dx.doi.org/10.14279/depositonce-9453},
+      doi     = {10.14279/depositonce-9453},
+      note    = {\href{http://dx.doi.org/10.14279/depositonce-9453}{http://dx.doi.org/10.14279/depositonce-9453}},
     }</pre>
   <p style="overflow-wrap: break-word;">Para citar en textos no compilados con TeX, LaTeX u otras variantes, es importante indicar el <a href="https://www.doi.org/">Identificador de Objeto Digital (DOI)</a> en la cita. Este puede indicarse añadiendo &ldquo;DOI 10.14279/depositonce-9453&rdquo; o el enlace &ldquo;http://dx.doi.org/10.14279/depositonce-9453 &ldquo;.</p>
   <hr>
