--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <center>
         <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
-        <h3>Postdoctoral Researcher at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
+        <h3>Postdoctoral Researcher at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
         <!--<h3><a href=""></a></h3>-->
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
@@ -157,7 +157,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='Postdoctoral Researcher<br/>at<br/><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a>';
+    x[0].innerHTML='Postdoctoral Researcher<br/>at<br/><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
