--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@
 	         <li class="nav-item"><a class="nav-link" href="#areas">Areas of interest</a></li>
            <!--<li class="nav-item"><a class="nav-link" href="#topics">Topics of interest</a></li>-->
            <li class="nav-item"><a class="nav-link" href="#papers">Papers and preprints</a></li>
-           <li class="nav-item"><a class="nav-link" href="#other">Other</a></li>
+           <li class="nav-item"><a class="nav-link" href="#other">Other publications</a></li>
         </ul>
     </nav>
 </div>
@@ -168,7 +168,7 @@
 </div>
 <hr>
 <div id="other">
-  <h2 class="display-4">Other</h2>
+  <h2 class="display-4">Other publications</h2>
 
   <br><div class="row"><div class="col-md-12">
   <h3>Theses</h3>
@@ -179,8 +179,8 @@
    <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. <i>Condition  and  Homology  in  Semialgebraic  Geometry</i>. PhD thesis, Technsiche Universit&auml;t Berlin, DepositOnce Repository, December 2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
   </div>
 
-</div>
-<br>
+ </div>
+<br/>
 </div>
 
 <footer>
