--- a/research_es.html
+++ b/research_es.html
@@ -72,7 +72,7 @@
 	         <li class="nav-item"><a class="nav-link" href="#areas">Áreas de interés</a></li>
            <!--<li class="nav-item"><a class="nav-link" href="#topics">Topics of interest</a></li>-->
            <li class="nav-item"><a class="nav-link" href="#papers">Artículos científicos y preprints</a></li>
-           <li class="nav-item"><a class="nav-link" href="#other">Otros</a></li>
+           <li class="nav-item"><a class="nav-link" href="#other">Otras publicaciones</a></li>
         </ul>
     </nav>
 </div>
@@ -169,7 +169,7 @@
 </div>
 <hr>
 <div id="other">
-  <h2 class="display-4">Otros</h2>
+  <h2 class="display-4">Otras publicaciones</h2>
 
   <br><div class="row"><div class="col-md-12">
   <h3>Tesis</h3>
@@ -180,8 +180,8 @@
    <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. <i>Condition  and  Homology  in  Semialgebraic  Geometry (Inglés) [Condición y Homología en Geometría Semialgebraica]</i>. Tesis doctoral, Technsiche Universit&auml;t Berlin, Repositorio DepositOnce, diciembre 2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
   </div>
 
-</div>
-<br>
+ </div>
+<br/>
 </div>
 
 <footer>
