--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -48,7 +48,7 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #0071A9!important;color: white!important;">&emsp;</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#descripcion">Descripción</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#numeros">Números</a></li>
-		       <li class="nav-item"><a class="nav-link" href="#personas">Equipo y autores</a></li>
+		       <li class="nav-item"><a class="nav-link" href="#personas">Equipo y colaboradores/as</a></li>
 		       <li class="nav-item"><a class="nav-link" href="#listaarticulos">Artículos</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#actividades">Actividades</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#recon">Premios</a></li>
@@ -243,7 +243,7 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 </div>
 <div class="col-md-6">
 
-<h4><em>Colaboradores/as Esporádicos/as</em></h4>
+<h4><em>Colaboradores/as esporádicos/as</em></h4>
 
 <ul style="list-style-type:none;">
  <li><a href="http://www1.mat.uniroma1.it/people/fanelli/">Luca Fanelli</a> (2011)</li>
