--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -48,7 +48,7 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #0071A9!important;color: white!important;">&emsp;</a></li>
            <li class="nav-item"><a class="nav-link" href="#descripcion">Deskribapena</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#numeros">Zenbakiak</a></li>
-		       <li class="nav-item"><a class="nav-link" href="#personas">Taldea eta egileak</a></li>
+		       <li class="nav-item"><a class="nav-link" href="#personas">Taldea eta kolaboratzaileak</a></li>
 		       <li class="nav-item"><a class="nav-link" href="#listaarticulos">Artikuluak</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#actividades">Jarduerak</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#recon">Sariak</a></li>
@@ -105,21 +105,21 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadé
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 1<br>Octubre 2011</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle01.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada01.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 1. Zenakia<br>2011ko Urria</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle01.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada01.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 2<br>Noviember-Diciembre 2011</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle02.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada02.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 2. Zenbakia<br>2011ko Azaroa-Abdendua</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle02.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada02.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 3<br>Enero-Febrero 2012</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle03.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada03.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 3. Zenbakia<br>2012ko Urtarrila-Otsaila</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle03.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada03.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 </div>
 
@@ -127,21 +127,21 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadé
 <div class="row" style="padding-top:3em;">
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 4<br>Marzo-Abril 2012</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle04.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada04.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 4. Zenbakia<br>2012ko Martzoa-Apirila</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle04.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada04.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 5<br>Septiembre-Octubre 2012</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle05.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada05.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 5.Zenbakia<br>2012ko Iraila-Urria</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle05.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada05.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 6<br>Noviembre-Diciembre 2012/Enero 2013</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle06.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada06.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 6. Zenbakia<br>2012ko Azaroa-Abendua/2013ko Urtarrila</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle06.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada06.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 </div>
 
@@ -149,21 +149,21 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadé
 <div class="row" style="padding-top:3em;">
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 7<br>Febrero-Marzo-Abril-Mayo 2013</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle07.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada07.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 7. Zenbakia<br>2013ko Otsaila-Martzoa-Apirila-Maiatza</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle07.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada07.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 8<br>Septiembre-Octubre 2012</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle08.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada08.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 8. Zenbakia<br>2012ko Iraila-Urria</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle08.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada08.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 9<br>Noviembre-Diciembre 2013/Enero 2014</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle09.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada09.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 9. Zenbakia<br>2013ko Azaroa-Abendua/2014ko Urtarrila</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle09.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada09.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 </div>
 
@@ -172,9 +172,9 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadé
 </div>
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/PIkasle10.pdf"><img style="width:90%;" src="pikasle/portada10red.jpg" alt="Cover of Issue N. 10 of PIkasle"/></a>
-<p style="margin:0;"><b>$\pi kasle$ Número 10<br>Enero2014/Junio 2014</b>
-</p><span><a style="float:left;" href="pikasle/PIkasle10.pdf">&ensp;PDF del número&ensp;</a>
-<a style="float:right;" href="pikasle/portada10.jpg">&ensp;Cubierta del número&ensp;</a></span>
+<p style="margin:0;"><b>$\pi kasle$ren 10. Zenbakia<br>2014ko Urtarrila/2014ko Ekaina</b>
+</p><span><a style="float:left;" href="pikasle/PIkasle10.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
+<a style="float:right;" href="pikasle/portada10.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
 </div>
@@ -184,7 +184,7 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadé
 ================================================== -->
 
 </div><hr><div id="personas">
-<h1>Equipo de la revista y colaboradores</h1>
+<h1>Aldizkariaren taldea eta kolaboratzaileak</h1>
 
 <p style="text-align:justify;">
 La revista $\pi kasle$ estaba dirigida por el <em>Comité Editorial</em>, el cual contaba con el apoyo del <em>Comité Asesor</em> y el <em>Equipo de Colaboradores</em>. Aparte de ello, la revista ha contado con colaboraciones esporádicas de diversas personas.
@@ -201,7 +201,7 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 <div class="row">
 <div class="col-md-6">
 
-<h4><em>Equipo de la revista</em></h4>
+<h4><em>Aldizkariaren taldea</em></h4>
 
 <ul style="list-style-type:none;">
  <li>Maitane Amor (2011-14)</li>
@@ -225,7 +225,7 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
  <li>Antonio Gallastegui (2013-14)</li>
 </ul>
 
-<h4><em>Comité Editorial</em></h4>
+<h4><em>Batzorde Editoriala</em></h4>
 
 <ul style="list-style-type:none;">
  <li><a href="https://math.mit.edu/directory/profile.php?pid=1715">Ricardo Grande</a> (2011-14)</li>
@@ -234,7 +234,7 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
  <li>Manuel Santos (2014)</li>
 </ul>
 
-<h4><em>Comité Asesor</em></h4>
+<h4><em>Aholkulari Batzordea</em></h4>
 
 <ul style="list-style-type:none;">
  <li><a href="http://www.ehu.eus/~mtwmastm/">Marta Macho-Stadler</a> (2011-14)</li>
@@ -245,7 +245,7 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 </div>
 <div class="col-md-6">
 
-<h4><em>Colaboradores/as Esporádicos/as</em></h4>
+<h4><em>Noizbehinkako kolaboratzaileak</em></h4>
 
 <ul style="list-style-type:none;">
  <li><a href="http://www1.mat.uniroma1.it/people/fanelli/">Luca Fanelli</a> (2011)</li>
@@ -278,11 +278,11 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
  <li>Álex Olleta (2011-12)</li>
 </ul>
 
-<h4><em>Diseño de Portadas</em></h4>
+<h4><em>Azalen diseinua</em></h4>
 
 <ul style="list-style-type:none;">
- <li><a href="https://tonellicueto.github.io">Josué Tonelli-Cueto</a> (Números 1 al 9)</li>
- <li><a href="http://www.imanolperez.com/">Imanol Pérez</a> (Número 10)</li>
+ <li><a href="https://tonellicueto.github.io">Josué Tonelli-Cueto</a> (9. zenbakirako 1.eko)</li>
+ <li><a href="http://www.imanolperez.com/">Imanol Pérez</a> (10. zenbakia)</li>
 </ul>
 </div>
 </div>
@@ -290,27 +290,27 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 <div class="row" style="padding-top:3em;">
 <div class="col-md-5" style="text-align:center;padding-top: 0.8%;">
 <a href="pikasle/fotogrupo2012.jpg"><img style="width:90%;" src="pikasle/fotogrupo2012red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2011-12"/></a>
-<p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>a finales del curso académico 2011-12
+<p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2011-12 ikasurte amaieran
 </p></div>
 <div class="col-md-7" style="text-align:center;">
 <a href="pikasle/fotogrupo2013.jpg"><img style="width:90%;" src="pikasle/fotogrupo2013red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
-<p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>a finales del curso académico 2012-13
+<p style="margin:0;"><em>$\pi kasle$ren <em>taldea</em><br>2012-13 ikasurte amaieran
 </p></div>
 </div>
 
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 0.8%;">
 <a href="pikasle/fotogrupo2013B.JPG"><img style="width:90%;" src="pikasle/fotogrupo2013Bred.JPG" alt="Group picture of the collaborators of PIkasle at one party on May of 2013"/></a>
-<p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>en una celebración en mayo de 2013
+<p style="margin:0;">2011-12 ikasurte amaieran<br>2013ko maiatzaren ospakizun batean
 </p></div>
 
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
-<p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>a finales del curso académico 2013-14
+<p style="margin:0;">2011-12 ikasurte amaieran<br>2013-14 ikasurte amaieran
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
 <a href="pikasle/fotgrupoFOUNDERS.jpg"><img style="width:90%;" src="pikasle/fotgrupoFOUNDERS.jpg" alt="Josue Tonelli-Cueto and Ricardo Grande"/></a>
-<p style="margin:0;"><a href="https://tonellicueto.github.io">Josué Tonelli-Cueto</a> and <a href="https://math.mit.edu/directory/profile.php?pid=1715">Ricardo Grande</a>, <br> founders and original editors of $\pi kasle$<br>
+<p style="margin:0;"><a href="https://tonellicueto.github.io">Josué Tonelli-Cueto</a> eta <a href="https://math.mit.edu/directory/profile.php?pid=1715">Ricardo Grande</a>, <br>$\pi kasle$ren sortzaileak eta jatorrizko editoreak<br>
 <small>(&copy;2014 Izaskun Lekuona)</small>
 </p></div>
 </div>
