--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -48,7 +48,7 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #0071A9!important;color: white!important;">&emsp;</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#descripcion">Descripción</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#numeros">Números</a></li>
-		       <li class="nav-item"><a class="nav-link" href="#personas">Equipo y colaboradores/as</a></li>
+		       <li class="nav-item"><a class="nav-link" href="#personas">Equipo y colaboradores</a></li>
 		       <li class="nav-item"><a class="nav-link" href="#listaarticulos">Artículos</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#actividades">Actividades</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#recon">Premios</a></li>
