--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -659,7 +659,7 @@ La revista obtuvo dos premios en reconocimiento a sus logros:
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
 <img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué y Esther Domínguez, entonces decana de la ZTF-FCT, en la entrega de los III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU"/>
 <p style="margin:0;">
-Ricardo, Josué y Esther Domínguez,<br>entonces decana de la ZTF-FCT,<br>en la entrega de los premios de la UPV/EHU
+Ricardo, Josué eta Esther Domínguez,<br>entonces decana de la ZTF-FCT,<br>en la entrega de los premios de la UPV/EHU
 </p>
 </div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
@@ -713,7 +713,7 @@ De este modo, al llegar al final de su primer año, la revista $\pi kasle$ se ha
 ================================================== -->
 
 </div><hr><div id="misc">
-<h1>Miscelánea</h1>
+<h1>Saski-naskia</h1>
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-2">
@@ -722,7 +722,7 @@ De este modo, al llegar al final de su primer año, la revista $\pi kasle$ se ha
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
 <a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo de PIkasle"/></a>
 <p style="margin:0;">
-Logo de $\pi kasle$<br><small>(Diseño de Maitane Amor)</small>
+Logo de $\pi kasle$<br><small>(Maitane Amor-en diseinua)</small>
 </p>
 <p style="margin:0;text-align:justify;">
 Este logo fue propuesto por Maitane Amor junto con el nombre, también propuesta de ella. En la elección del nombre, esta fue la opción elegida por casi toda persona que votó.
@@ -745,7 +745,7 @@ Julio García, miembro del Comité Asesor de $\pi kasle$, era el encargado de ve
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
 <a href="pikasle/design1.jpg"><img style="width:90%;" src="pikasle/design1.jpg" alt="Paul Erd&ouml;s a la Warhol (by Josué Tonelli-Cueto)"/></a>
 <p style="margin:0;">
-Paul Erdös <em>&agrave; la Warhol</em><br><small>(Diseño de Josué Tonelli-Cueto)</small>
+Paul Erdös <em>&agrave; la Warhol</em><br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
 <p style="margin:0;text-align:justify;">
 Esta imagen fue la portada del séptimo número y del segundo número impreso de $\pi kasle$. Esta imagen del matemático húngaro Paul Erdös al estilo del <em>pop-art</em> alcanzó amplia popularidad entre el público de la revista, siendo una de las portadas más populares.
@@ -754,7 +754,7 @@ Esta imagen fue la portada del séptimo número y del segundo número impreso de
 <div id="designs" class="col-md-4" style="text-align:center;padding-top: 6%;">
 <a href="pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (by Josué Tonelli-Cueto)"/></a>
 <p style="margin:0;padding-top:0.7em;">
-<em>The Categoricist</em><br><small>(Diseño de Josué Tonelli-Cueto)</small>
+<em>The Categoricist</em><br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
 <p style="margin:0;text-align:justify;">
 Esta figura fue la portada del noveno número y del tercer número impreso de $\pi kasle$. Esta figura representa la visión general, desde las nubes, de la matemática. Esto es, representa a la persona matemática que busca elevarse lo suficiente para obtener una visión general y unificada que trivialice los problemas que afronta.
@@ -763,7 +763,7 @@ Esta figura fue la portada del noveno número y del tercer número impreso de $\
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
 <a href="pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (by Josué Tonelli-Cueto)"/></a>
 <p style="margin:0;padding-top:0.7em;">
-<em>Doctor Delta</em><br><small>(Diseño de Josué Tonelli-Cueto)</small>
+<em>Doctor Delta</em><br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
 <p style="margin:0;text-align:justify;">
 Esta figura fue la contraportada del tercer número impreso de $\pi kasle$. Esta figura representa la visión concreta, desde el suelo, de la matemática. Esto es, representa a la persona matemática que se encuentra cavando en la mina de los detalles para encontrar el filón con el que abordar los problemas con los que se encuentra.
