--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -294,20 +294,21 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 </p></div>
 <div class="col-md-7" style="text-align:center;">
 <a href="pikasle/fotogrupo2013.jpg"><img style="width:90%;" src="pikasle/fotogrupo2013red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
-<p style="margin:0;"><em>$\pi kasle$ren <em>taldea</em><br>2012-13 ikasurte amaieran
+<p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2012-13 ikasurte amaieran
 </p></div>
 </div>
 
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 0.8%;">
 <a href="pikasle/fotogrupo2013B.JPG"><img style="width:90%;" src="pikasle/fotogrupo2013Bred.JPG" alt="Group picture of the collaborators of PIkasle at one party on May of 2013"/></a>
-<p style="margin:0;"><em>$\pi kasle$ren <em>taldea</em><br>2013ko maiatzaren ospakizun batean
+<p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2013ko maiatzaren ospakizun batean
 </p></div>
 
 <div class="col-md-4" style="text-align:center;">
 <a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
-<p style="margin:0;"><em>$\pi kasle$ren <em>taldea</em><br>2013-14 ikasurte amaieran
+<p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2013-14 ikasurte amaieran
 </p></div>
+
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
 <a href="pikasle/fotgrupoFOUNDERS.jpg"><img style="width:90%;" src="pikasle/fotgrupoFOUNDERS.jpg" alt="Josue Tonelli-Cueto and Ricardo Grande"/></a>
 <p style="margin:0;"><a href="https://tonellicueto.github.io">Josué Tonelli-Cueto</a> eta <a href="https://math.mit.edu/directory/profile.php?pid=1715">Ricardo Grande</a>, <br>$\pi kasle$ren sortzaileak eta jatorrizko editoreak<br>
